updates to index files
edited national shelter data

--- a/index.Rmd
+++ b/index.Rmd
@@ -326,10 +326,8 @@ Column {.tabset .tabset-fade}
 
 <br>
 
-&nbsp; &nbsp; Eradicating **Homelessness** has long been a "*dream*" of activists and non-activists alike. Its a problem that resonates with most Canadians today since many are facing similar precarious housing situations. The lack of safe and affordable housing is a critical social and economic problem that political leaders have long ignored or offered weak ineffectively solutions.<br>
-&nbsp; &nbsp; One of the major problems in addressing homelessness is the lack of transparency - we simply <u>still</u> do not know how many people are homeless in Canada. Current efforts aimed at "*counting*" this growing population are far from complete and rarely done in an expedient manner. Homelessness is one of the most pressing social issues of our times and therefore worthy of much more meaningful thought and timely solutions. Open access to accurate and up-to-date information about the number of homeless people in every community is the only <u>rational</u> and meaningful way of measuring and accessing the "*true*" size of this problem. Effective policies that address homelessness are only made possible by accurately measuring the problem itself (i.e. baseline) and the outcomes of any proposed policy. Yearly census or surveys of homelessness in select communities falls far short of this objective. Homelessness should not be treated like the Audubon Christmas Bird Count (CBC), where people often sit from the comfort of their homes enumerating birds that happen to fly up to their backyard feeders, only to be forgotten about until next Christmas.<br>
-&nbsp; &nbsp; It therefore comes as no surprise that some of the <u>latest</u> government offerings, such as **National Service Provider List** (2022)**<sup>1,2</sup>** and **Infrastructure Canada's** **Homeless Shelter Capacity Point-in-Time Counts** (2022)**<sup>1,3</sup>**, showcase the current lacklustre approaches to homelessness. Daily updates, not yearly updates, as well as <u>open</u> access to a standardized information <u>sharing</u> system needs to be in place in every community. In this way much more reliable and accurate information can be collected and accessed by <u>all</u> community stake holders. Allocating appropriate levels of funding to help fix a problem is impossible if you don't know the extent and nature of the problem. Band-aide solutions do little and often leads to a "*commoditization*" of homelessness and the poor. There is obviously much more that can be done then simply making "lists" that often serves to only highlight our short comings.<br>
-&nbsp; &nbsp; According to the **NSPL** data (**Fig. 1**) there were approximately 30,402 permanent beds provided by 1,120 emergency and transitional housing shelter services in different parts of Canada in 2022. By comparison Infrastructure Canada's "*Point-in-Time*" (**PiT**) data (2022) shows that in some 72 communities and regions across Canada there were an estimated 39,713 beds provided by 1,725 shelters (**Fig. 2**). The discrepancies between these two 2022 lists tell us that we don't even know the "*true*" number of shelter service providers in the country. Our commitment to solving this key social issues is severely compromised if we don't know the size of the homeless population nor the size and extent of our response. Successful policies depend on useful, accurate, and timely information. It also has to be shared since information and power are "*two-sides of the same coin*" and must be carefully weighed by the scales of justice.
+&nbsp; &nbsp; Eradicating **Homelessness** has long been a "*dream*" of activists and non-activists alike. Its a problem that resonates with most Canadians today since many are facing similar precarious housing situations. The lack of safe and affordable housing is a critical social and economic issue that most political leaders have largely ignored. Perhaps the biggest problem in addressing homelessness is the lack of transparency - we simply do not know how many people are homeless in Canada. Although homelessness is arguably one of the most important social issues of our times, current homeless "counting" strategies appear to be largely ineffective. Access to accurate and timely information about the number of homeless people is the only <u>rational</u> and meaningful way of accurately accessing the success or failure of any proposed solution. Single day census data carried out in a select number of communities is not a very effective or ideal way of monitoring homelessness across the country.<br>
+&nbsp; &nbsp; It's therefore not surprising that some of the <u>latest</u> government statistics on homelessness, such as **National Service Provider List** (2022)**<sup>1,2</sup>** and **Infrastructure Canada's** **Homeless Shelter Capacity Point-in-Time Counts** (2022)**<sup>1,3</sup>**, paints a very bleak picture of the problem. Besides the increasing rates of homelessness across the country, the "*snap-shot*" approach to monitoring the homeless population is, as alluded to above, neither desirable nor prudent. According to the **NSPL** data (**Fig. 1**) there were approximately 30,402 permanent beds provided by 1,120 emergency and transitional housing shelter services in different parts of Canada in 2022. By comparison Infrastructure Canada's "*Point-in-Time*" (**PiT**) data (2022) shows that in some 72 communities and regions across Canada there were an estimated 39,713 beds provided by 1,725 shelters (**Fig. 2**). The discrepancies between these two 2022 lists suggests that we also don't have an accurate measure of the number of shelter service providers in the country.
 
 <br>
 <br>
@@ -562,12 +560,12 @@ The chronic lack of safe and affordable housing, along with the growing economic
 <b>About Toronto's Shelter System:</b>
 <br>
 Information in this report is based on a number of Shelter and Homelessness records that are freely available for download from the City of Toronto's **<a class="one" href="https://open.toronto.ca/">Open Data Portal</a>**. The following is a brief overview of the main datasets analyzed by our group, the **<a class="one" href="https://www.unhousedliberation.ca/">Voices 4 Unhoused Liberation</a>**.<br>
-**(i) <a class="one" href="https://open.toronto.ca/dataset/central-intake-calls/">Central Intake</a>** (**CI**)**<sup>7</sup>** is the entry point for persons in need of emergency shelter services. People able to access **CI**'s 24/7 telephone line (416-338-4766 or 1-877-338-3398) can potentially receive a <u>referral</u> to an emergency shelter or other overnight accommodations. This dataset contains records of calls received by **CI**, and the outcomes of those calls (e.g. # unique individuals who contact **CI**, but were not matched to a shelter space each day). All of this information is collected by the city of Toronto's **S**helter **M**anagement **I**nformation **S**ystem (**SMIS**). Callers not matched to an available space that <u>suits their needs</u> remain in the queue until they can be provided a referral, or until the closeout process at the end of the night at 4:00 AM. These daily call counts and <u>outcomes</u> (i.e. **SMIS** assigns codes for various outcomes) are collected and reported on a monthly basis (i.e. monthly updates are published on the 15<sup>th</sup> day of the following month). **CI** uses 13 distinct <u>wrap-up codes</u> to classify the daily calls they receive. Unfortunately, these codes only provide information about the volume and types of calls, and do not contain information about the outcomes of said referrals.
+**(i) <a class="one" href="https://open.toronto.ca/dataset/central-intake-calls/">Central Intake</a>** (**CI**)**<sup>7</sup>** is the entry point for persons in need of emergency shelter services. People able to access **CI**'s 24/7 telephone line (416-338-4766 or 1-877-338-3398) can potentially receive a <u>referral</u> to an emergency shelter or other overnight accommodations. This dataset contains records of calls received by **CI**, and the outcomes of those calls (e.g. # unique individuals who contact **CI**, but were not matched to a shelter space each day). All of this information is collected by the city of Toronto's **S**helter **M**anagement **I**nformation **S**ystem (**SMIS**). Callers not matched to an available space that <u>suits their needs</u> remain in the queue until they can be provided a referral, or until the closeout process at the end of the night at 4:00 AM. These daily call counts and <u>outcomes</u> (i.e. **SMIS** assigns codes for various outcomes) are collected and reported on a monthly basis (i.e. monthly updates are published on the 15<sup>th</sup> day of the following month). **CI** uses 13 distinct <u>wrap-up codes</u> to classify the daily calls they receive. Unfortunately, these codes only provide information about the volume and types of calls, and do not contain information about the outcomes of said referrals (**Table 1**).
 <br>
-**(ii)** **<a class="one" href="https://open.toronto.ca/dataset/toronto-shelter-system-flow/">Toronto Shelter System Flow</a>** (**TSSF**)**<sup>8</sup>** data is compiled on a monthly basis by the city of Toronto's **S**helter **M**anagement **I**nformation **S**ystem (**SMIS**). These records show the number of people entering (intake) or leaving (outtake) the shelter system. Some of the terms used in these records are listed in **Table 1**. Unfortunately, the current **SMIS** data is limited since it does not include any information about homeless people sleeping outdoors, or homeless people who do not use city funded services that are apart of **SMIS**. Although it is difficult to assess the exact number of homelessness people within the city, the most recent **<a class="one" href="https://open.toronto.ca/dataset/2021-street-needs-assessment-results/">Street Needs Assessment (2021)</a>** suggests that ~18% of city's homeless population are not included in the current data. This is likely an under estimate of its "*true*" size given the severity of the current housing and homelessness problems within the region.**<sup>8</sup>**
+**(ii)** **<a class="one" href="https://open.toronto.ca/dataset/toronto-shelter-system-flow/">Toronto Shelter System Flow</a>** (**TSSF**)**<sup>8</sup>** data is compiled on a monthly basis by the city of Toronto's **S**helter **M**anagement **I**nformation **S**ystem (**SMIS**). These records show the number of people entering (intake) or leaving (outtake) the shelter system. Some of the terms used in these records are listed in **Table 2**. Unfortunately, the current **SMIS** data is limited since it does not include any information about homeless people sleeping outdoors, or homeless people who do not use city funded services that are apart of **SMIS**. Although it is difficult to assess the exact number of homelessness people within the city, the most recent **<a class="one" href="https://open.toronto.ca/dataset/2021-street-needs-assessment-results/">Street Needs Assessment (2021)</a>** suggests that ~18% of city's homeless population are not included in the current data. This is likely an under estimate of its "*true*" size given the severity of the current housing and homelessness problems within the region.**<sup>8</sup>**
 <br>
-**(iii) <a class="one" href="https://open.toronto.ca/dataset/daily-shelter-overnight-service-occupancy-capacity/">Daily Shelter Overnight Service Occupancy</a>** (**DSOSO**)**<sup>9</sup>** records maintained by **SMIS** is compiled on a daily basis. It records the number of people who use overnight shelters and allied services within the **GTA**. The data includes the identify of program operators, as well as the locations and nature of the services they provide.**<sup>6</sup>**<br>
-&nbsp; &nbsp; Unfortunately there is little information about the amount of funding the city receives and allocates for these different homeless programs and services. The **DSOSO** dataset only mentions **Funding Capacity** within the context of the "*number of beds or rooms that a program is intended* [funded] *to provide*".**<sup>9</sup>** Although there may be a number of reasons why beds or rooms may be temporarily out of service (e.g. repairs, renovations, outbreaks, or pest control) they are not reported. These records also mention **Actual Capacity**, which refers to the "*number of beds or rooms in service and showing as <u>available for occupancy</u> in the SMIS at time of reporting.*" This latter measure is touted as being "*a more effective capacity measure to assess program occupancy rates*". However, the number of <u>unavailable</u> rooms or beds (**Note:** **# UNAVAILABLE BEDS** = **Capacity Funding Bed** - **Capacity Actual Bed**) is arguable a more reliable measure of the number of rooms/beds the currently funded system can and should provide and fill on a daily basis. Unfortunately there appears to be very little oversight of service providers with regards to reducing or eliminating bed/room "*unavailability*", and the draconian nature of service restrictions they impose on their clients. 
+**(iii) <a class="one" href="https://open.toronto.ca/dataset/daily-shelter-overnight-service-occupancy-capacity/">Daily Shelter Overnight Service Occupancy</a>** (**DSOSO**)**<sup>9</sup>** records maintained by **SMIS** is compiled on a daily basis. It records the number of people who use overnight shelters and allied services within the **GTA**. The data includes the identify of program operators, as well as the locations and nature of the services they provide (**Table 3**).**<sup>6</sup>**<br>
+&nbsp; &nbsp; Unfortunately there is little information about the amount of funding the city receives and allocates for these different homeless programs and services. The **DSOSO** data only mentions **Funding Capacity** within the context of the "*number of beds or rooms that a program is intended* [funded] *to provide*".**<sup>9</sup>** Although there may be a number of reasons why beds or rooms may be temporarily out of service (e.g. repairs, renovations, outbreaks, or pest control) they are not reported. These records also mention **Actual Capacity**, which refers to the "*number of beds or rooms in service and showing as <u>available for occupancy</u> in the SMIS at time of reporting.*" This latter measure is touted as being "*a more effective capacity measure to assess program occupancy rates*". However, the number of <u>unavailable</u> rooms or beds (**Note:** **# UNAVAILABLE BEDS** = **Capacity Funding Bed** - **Capacity Actual Bed**) also tells us the number of rooms/beds the current system is funding but not using on a daily basis. Unfortunately there appears to be little oversight of the service providers with regards to reducing or eliminating bed/room "*unavailability*", and the draconian nature of the service restrictions they impose on clients. 
 
 <br>
 
@@ -952,6 +950,8 @@ DemoPlot4
 
 <br>
 
+### Daily Shelter Overnight Service Occupancy (DSOSO) Data
+
 ```{r include=FALSE}
 ### ***********************************************************
 ### ********************** CITY VARIABLE **********************
@@ -1062,7 +1062,6 @@ df3.NA <- df2.NA %>% mutate(across(where(is.character), ~ na_if(.,"")))
 rm(df1, df2, df2.NA)
 
 ```
-
 
 <div align=center>
 **Figure 8: GTA Shelter Population (DSOSO)**<br>
