--- a/index.Rmd
+++ b/index.Rmd
@@ -207,7 +207,7 @@ Interactive Map {data-icon="ion-stats-bars"}
 Column {data-width=550}
 -----------------------------------------------------------------------
 
-### GTA Map of Homeless Resources
+### <b>GTA Map of Homeless Resources</b>
 
 ```{r include=FALSE}
 #### read in data file
@@ -304,7 +304,7 @@ TOmap2
 Column {data-width=400}
 -----------------------------------------------------------------------
 
-### Table: GTA Homeless Resources
+### <b>Table: GTA Homeless Resources</b>
 
 ```{r}
 
@@ -322,7 +322,7 @@ Information {data-icon="fa-info-circle"}
 Column {.tabset .tabset-fade}
 -----------------------------------------------------------------------
 
-### Canadian Homeless Shelter System - A National Failure
+### <b>Canadian Homeless Shelter System</b>
 
 <br>
 
@@ -537,7 +537,7 @@ PitPlotly
 <br>
 <br>
 
-### GTA Shelter System - Population in Crisis
+### <b>GTA Shelter System - Population in Crisis</b>
 
 <br>
 
@@ -655,6 +655,27 @@ Information in this report is based on a number of Shelter and Homelessness reco
         <td style="text-align:center"><span id="Blk">All Populations</span></td>
         <td style="text-align:left">This refers to the total number of individuals represented in the report without any demographic breakdown.</td>
       </tr>
+      </tr>
+      <tr>
+        <td style="text-align:center"><span id="Blk">Returned from Housing</span></td>
+        <td style="text-align:left">Individuals who were previously recorded as "Moved to Permanent Housing" but returned to an overnight service in the reporting month.</td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><span id="Blk">Newly Identified</span></td>
+        <td style="text-align:left">People who entered the shelter system for the first time.</td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><span id="Blk">Moved to Housing</span></td>
+        <td style="text-align:left">People who were using the shelter system and have moved to permanent housing.</td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><span id="Blk">Returned to Shelter</span></td>
+        <td style="text-align:left">People who were previously using the shelter system, then did not use the system for 3 months or longer, and have now returned. Some other communities may call this indicator "Returned from Inactive".</td>
+      </tr>
+      <tr>
+        <td style="text-align:center"><span id="Blk">Inactive</span></td>
+        <td style="text-align:left">People who were using the shelter system previously, but have not used the shelter system in the past three months. Some other communities may call this indicator “Moved to Inactive”.</td>
+      </tr>
     </tbody>
 </table>
 
@@ -740,7 +761,7 @@ Information in this report is based on a number of Shelter and Homelessness reco
 <br>
 
 
-### Toronto Central Intake Call Data
+### <b>Toronto CIC and TSSF Data</b>
 
 ```{r include=FALSE}
 ### import Central Intake Call dataset
@@ -766,8 +787,8 @@ CIC1plot <- ggplot(CICdf1) +
        y = "Total # Calls (coded)",
        color = "Total # Referrals \n (Sleeping/Resting Spaces)") +
   theme_bw() +
-  theme(axis.title.y = element_text(size = 11L, face = "bold"),
-        axis.title.x = element_text(size = 11L, face = "bold"),
+  theme(axis.title.y = element_text(size = 12L, face = "bold"),
+        axis.title.x = element_text(size = 12L, face = "bold"),
         plot.background = element_rect(fill = "white"),
         panel.grid.minor = element_blank(),
         legend.justification = c(1,0),
@@ -787,10 +808,10 @@ CIC1plot
 **Figure 5: Toronto Central Intake Centre (CIC)**<br>
 **(Current Data: 2020/10/30 - 2024/03/31)**<br>
 
-```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=7, fig.width=8, fig.align='center'}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, fig.width=8, fig.align='center'}
 ### Plot Central Intake Call Information
 CIC2plot <- ggplot(CICdf2) +
-  aes(x = Date,
+  aes(x = `Date`,
       y = `Unmatched callers`,
       colour = `Repeat caller`) +
   geom_line(linewidth = 1) +
@@ -799,8 +820,8 @@ CIC2plot <- ggplot(CICdf2) +
        y = "# Unmatched Callers (no shelter provided)",
        colour = "# Repeat Callers") +
   theme_bw() +
-  theme(axis.title.y = element_text(size = 11L, face = "bold"),
-        axis.title.x = element_text(size = 11L, face = "bold"),
+  theme(axis.title.y = element_text(size = 12L, face = "bold"),
+        axis.title.x = element_text(size = 12L, face = "bold"),
         plot.background = element_rect(fill = "white"),
         panel.grid.minor = element_blank(),
         legend.justification = c(1,0),
@@ -815,8 +836,6 @@ CIC2plot
 
 <br>
 <br>
-
-### Toronto Shelter System Flow (TSSF) Data
 
 ```{r include=FALSE}
 ### Import data file
@@ -867,12 +886,9 @@ plotDemodf3 <- ggplot(Demodf3) +
   geom_line(aes(linewidth = row_sum), color = "darkblue", lineend = "round") +
   labs(x = "Date",
        y = "Total Homeless Population (SMIS #)",
-       linewidth = "Total #",
-       caption = "Current: Feb 2024") +
+       linewidth = "Total #") +
  theme_bw() +
- theme(plot.caption = element_text(hjust = 0),
-       axis.title.y = element_text(size = 12L,
-                                   face = "bold"),
+ theme(axis.title.y = element_text(size = 12L, face = "bold"),
        axis.title.x = element_text(size = 12L, face = "bold"))
 
 plotDemodf3
@@ -931,12 +947,10 @@ DemoPlot4 <- ggplot(Demodf4) +
                                 Youth = "orchid")) +
   labs(x = "Date",
        y = "Homeless Population (SMIS #)",
-       caption = "Current: Feb 2024",
        color = "Population Group",
        linewidth = "Population Group %") +
   theme_bw() +
-  theme(plot.caption = element_text(hjust = 0),
-        axis.title.y = element_text(size = 12L, face = "bold"),
+  theme(axis.title.y = element_text(size = 12L, face = "bold"),
         axis.title.x = element_text(size = 12L, face = "bold"),
         plot.background = element_rect(fill = "white"),
         panel.grid.minor = element_blank())
@@ -949,8 +963,55 @@ DemoPlot4
 **Figure 7. Demographics of TSSF dataset.** The above plot shows the number of "*actively*" homeless people classified as either **(i)** Chronically homeless, **(ii)** a member of a homeless Family, **(iii)** Indigenous, **(iv)** a non-refugee, **(v)** a refugee, **(vi)** a single adult (> 24 yrs), or a **(vii)** Youth (16-24 yrs) who is not a member of an homeless family. Like **Figure 6**, the changing width of the plotted line reflects the changing dynamics of each homeless group. Currently (Mar 2024) the largest homeless demographic group is single adults (Note: 7266 single adults, or 67.1%, compared to 2555 family members, or 23.6%, and 1012 youths, or 9.3%). Adults (> 24 yrs) also make up ~77% (4835/6288) of the chronic homeless population. The homeless refugee population (5805, or 53.6%) slightly out numbers the homeless non-refugee population (5028, or 46.4%).
 
 <br>
+<br>
 
-### Daily Shelter Overnight Service Occupancy (DSOSO) Data
+<div align=center>
+**Figure 8: Toronto Shelter System Flow (TSSF)**<br>
+**(SMIS dataset: 2018/01 - 2024/03)**<br>
+
+```{r}
+
+### Apply **rowSums** function to add up "returned" and "new" users
+Demodf4$RNusers <- rowSums(Demodf4[ , c(4:6)], na.rm=TRUE)
+Demodf5 <- select(Demodf4, 1:9,20,15,16)
+
+Demodf5.plot <- ggplot(Demodf5) +
+  aes(x = Date, y = RNusers,
+      colour = moved_to_housing,
+      group = population_group) +
+  geom_line(linewidth = 1) +
+  scale_color_viridis_c(option = "inferno", direction = 1) +
+  guides(colour = guide_colourbar(direction = "horizontal")) +
+  labs(x = "Date",
+       y = "# New & Returned Shelter Occupants",
+       colour = " ") +
+  theme_bw() +
+  theme(axis.title.y = element_text(size = 10L, face = "bold"),
+        axis.title.x = element_text(size = 10L, face = "bold"),
+        plot.background = element_rect(fill = "white"),
+        panel.grid.minor = element_blank(),
+        legend.justification = c(1,0),
+        legend.position = c(0.575,0.08)) +
+  facet_wrap(vars(population_group),
+             scales = "free_y", ncol = 3L, nrow = 3L)
+
+```
+
+
+```{r out.width='80%', fig.align='center'}
+### Use 'cowplot' to annotate graph
+ggdraw(Demodf5.plot) + draw_label("# Moved to Housing", x = 0.495, y = 0.285, size = 8)
+
+```
+
+</div>
+
+**Figure 8. Demographics of TSSF - In/Out Shelter Flow.** The above plot shows the number of people for each of the indicated demographic groups who have either <u>entered</u> or <u>exited</u> the shelter system since 2018. The plotted number of shelter occupants is an aggregate of those who are new to the shelter system and those who have previously left the shelter system and subsequently returned to the shelter system. The above plots also show the number of individuals who have left the shelter system for permanent housing (i.e. represented by the colour of the plotted line, see <u>colour coded</u> number scale). The above plot, like the one shown in **Figure 7**, contains the following demographic groups: **(i)** Chronically homeless, **(ii)** Family members, **(iii)** Young people (16-24 yrs), **(iv)** Indigenous people, **(v)** single adults (> 24 yrs), **(vi)** refugees, and **(vii)** non-refugees. Overall, these plots clearly show that the number of homeless people moving out of the shelter system and into permanent housing are relatively few in number. **Indigenous** and **Young** (< 24 yrs) people appear to be the two groups most affected by the lack of access to permanent housing over the past 6 years. Moreover, there is another relatively large group of former shelter occupants, termed "*Inactive*" or "*Moved to Inactive*", that are not represented in these plots. According to **TSSF** records these are people who were using the shelter system up until three months ago, but have apparently fallen off the "*radar*" (i.e. housing or homeless status currently unknown).
+
+<br>
+<br>
+
+### <b>Toronto DSOSO Data</b>
 
 ```{r include=FALSE}
 ### ***********************************************************
@@ -1064,7 +1125,7 @@ rm(df1, df2, df2.NA)
 ```
 
 <div align=center>
-**Figure 8: GTA Shelter Population (DSOSO)**<br>
+**Figure 9: GTA Shelter Population (DSOSO)**<br>
 **(Period: 2021/01/01 - 2024/04/21)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=7, fig.width=8, fig.align='center'}
@@ -1101,13 +1162,13 @@ plotResSumly
 ```
 
 </div>
-**Figure 8. Total Shelter Population within the Greater Toronto Area (GTA).** The above plot shows the total number of daily shelter users for the period spanning 2021-01-01 to 2024-04-21. The number of shelter occupants have increased by more than 63% during this time.
+**Figure 9. Total Shelter Population within the Greater Toronto Area (GTA).** The above plot shows the total number of daily shelter users for the period spanning 2021-01-01 to 2024-04-21. The number of shelter occupants have increased by more than 63% during this time.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 9: GTA Shelter Population (DSOSO)**<br>
+**Figure 10: GTA Shelter Population (DSOSO)**<br>
 **(Regional Numbers)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=8, out.width='100%', fig.align='center'}
@@ -1145,16 +1206,16 @@ plotCTly
 ```
 
 </div>
-**Figure 9. Shelter Population per GTA region.** The plot shows the total number of shelter users within different parts of the **GTA** (i.e. Toronto, North York, Etobicoke, Scarborough, Vaughan) for the past ~40 months (2021-01-01 to 2024-04-21). The data reveals that the vast majority of shelter users are currently being housed within Toronto and North York (see Bar graph in **Figure 10**).
+**Figure 10. Shelter Population per GTA region.** The plot shows the total number of shelter users within different parts of the **GTA** (i.e. Toronto, North York, Etobicoke, Scarborough, Vaughan) for the past ~40 months (2021-01-01 to 2024-04-21). The data reveals that the vast majority of shelter users are currently being housed within Toronto and North York (see Bar graph in **Figure 10**).
 
 <br>
 <br>
 
 <div align=center>
-**Figure 10: GTA Shelter Population (DSOSO)**<br>
+**Figure 11: GTA Shelter Population (DSOSO)**<br>
 **(Regional Numbers: 2024-04-21)**<br>
 
-```{r echo=FALSE, message=FALSE, warning=FALSE,}
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, out.width='70%', fig.align='center'}
 ### *********************************************************
 ### ********** GRAPH 7 - BAR GRAPH TOTAL # vs CITY **********
 ### *********************************************************
@@ -1189,13 +1250,13 @@ plotCityTotsly
 ```
 
 </div>
-**Figure 10. Current Shelter Populations per GTA Region.** This bar graph shows the current (2024-04-21) number of shelter occupants within each of the designated **GTA** regions. Toronto (68.5%) and North York (18.3%) shelter the majority of homeless people, while Scarborough (8.7%), Etobicoke (3.9%), and Vaughan (0.6%) collectively house less than 14% of the homeless population.
+**Figure 11. Current Shelter Populations per GTA Region.** This bar graph shows the current (2024-04-21) number of shelter occupants within each of the designated **GTA** regions. Toronto (68.5%) and North York (18.3%) shelter the majority of homeless people, while Scarborough (8.7%), Etobicoke (3.9%), and Vaughan (0.6%) collectively house less than 14% of the homeless population.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 11: GTA Shelter Population (DSOSO)**<br>
+**Figure 12: GTA Shelter Population (DSOSO)**<br>
 **(Shelter Sector Numbers)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=8, out.width='100%', fig.align='center'}
@@ -1233,13 +1294,13 @@ plotSectorly
 ```
 
 </div>
-**Figure 11. Homeless Demographics within the GTA Region.** The above graph looks at some homeless demographics within the **GTA**. The number of individuals within each of the designated homeless groups (i.e. **men**, **women**, **families**, **Youth** and **Mixed adults**) have rapidly increased over the last 3 years. Also, the size of the **Mixed adult** population has fluctuated quite dramatically over the past two years. Possible reasons for this may be due to the fluctuating number of designated "*mixed adult*" shelter spaces. For example, some service providers, like Homes First, are unilaterally transitioning some of their shelter spaces (e.g. Delta Hotel Shelter, Scarborough) to a select homeless population (i.e. refugee only) at the expense of other homeless people (i.e. non-refugees mixed adult population). Note that the fate of the Delta non-refugee homeless population has largely being determined by Ward 22 councillor Nick Mantas, who's NIMBY motion to rid the Delta shelter of non-refugee residents was passed by Toronto City Council meeting back in Feb 2024.
+**Figure 12. Homeless Demographics within the GTA Region.** The above graph looks at some homeless demographics within the **GTA**. The number of individuals within each of the designated homeless groups (i.e. **men**, **women**, **families**, **Youth** and **Mixed adults**) have rapidly increased over the last 3 years. Also, the size of the **Mixed adult** population has fluctuated quite dramatically over the past two years. Possible reasons for this may be due to the fluctuating number of designated "*mixed adult*" shelter spaces. For example, some service providers, like Homes First, are unilaterally transitioning some of their shelter spaces (e.g. Delta Hotel Shelter, Scarborough) to a select homeless population (i.e. refugee only) at the expense of other homeless people (i.e. non-refugees mixed adult population). Note that the fate of the Delta non-refugee homeless population has largely being determined by Ward 22 councillor Nick Mantas, who's NIMBY motion to rid the Delta shelter of non-refugee residents was passed by Toronto City Council meeting back in Feb 2024.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 12: GTA Shelter Population (DSOSO)**<br>
+**Figure 13: GTA Shelter Population (DSOSO)**<br>
 **(Program Model Numbers)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=6, out.width='100%', fig.align='center'}
@@ -1284,13 +1345,13 @@ plotPMtotalsly
 ```
 
 </div>
-**Figure 12. Homeless Population Program Model.** The above graph looks at the designated **Emergency** and **Transitional** shelter programs within the **GTA**. According to City of Toronto's **Housing + Homelessness Service Glossary (2019)<sup>10</sup>** the **Emergency Shelter Program** constitutes a homeless shelter program that individuals and families can access without a referral. By contrast a **Transitional Shelter Program** constitutes a homeless program that individuals and families can access <u>only</u> with a <u>referral</u>. The plotted **DSOSO** data clearly shows that only ~1 out of every 10 homeless individuals have been able to access a <u>referral</u>. This poor referral rate is also evident from the data plotted in **Figure 4** and **Figure 5**.
+**Figure 13. Homeless Population Program Model.** The above graph looks at the designated **Emergency** and **Transitional** shelter programs within the **GTA**. According to City of Toronto's **Housing + Homelessness Service Glossary (2019)<sup>10</sup>** the **Emergency Shelter Program** constitutes a homeless shelter program that individuals and families can access without a referral. By contrast a **Transitional Shelter Program** constitutes a homeless program that individuals and families can access <u>only</u> with a <u>referral</u>. The plotted **DSOSO** data clearly shows that only ~1 out of every 10 homeless individuals have been able to access a <u>referral</u>. This poor referral rate is also evident from the data plotted in **Figure 4** and **Figure 5**.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 13: GTA Shelter Population (DSOSO)**<br>
+**Figure 14: GTA Shelter Population (DSOSO)**<br>
 **(Service Type Numbers)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, out.width='100%', fig.align='center'}
@@ -1336,13 +1397,13 @@ plotSTtotalsly
 ```
 
 </div>
-**Figure 13. Homeless Overnight Service Types within the GTA.** Homeless individuals within the **GTA** can access different types of overnight services, including: **(i) Shelters**, **(ii) 24-Hour Respites**, **(iii) Motels/Hotels**, **(iv) Interim Housing**, **(v) Warming Centres**, **(vi) 24-Hour Women’s Drop-ins**, and **(vii) Isolation/Recovery Sites**. There are a few other **Service Types** offered, but they are ill-defined and accessed by very few people. As of April 21<sup>st</sup> 2024 the vast majority of **Service Types** are emergency type **Shelter** (4845, or 48.9%) and **Motel/Hotel** (4461, or 45%) services. Unfortunately, services that help homeless people transition to safer and more affordable permanent housing are largely non-existent within the Toronto Shelter system.
+**Figure 14. Homeless Overnight Service Types within the GTA.** Homeless individuals within the **GTA** can access different types of overnight services, including: **(i) Shelters**, **(ii) 24-Hour Respites**, **(iii) Motels/Hotels**, **(iv) Interim Housing**, **(v) Warming Centres**, **(vi) 24-Hour Women’s Drop-ins**, and **(vii) Isolation/Recovery Sites**. There are a few other **Service Types** offered, but they are ill-defined and accessed by very few people. As of April 21<sup>st</sup> 2024 the vast majority of **Service Types** are emergency type **Shelter** (4845, or 48.9%) and **Motel/Hotel** (4461, or 45%) services. Unfortunately, services that help homeless people transition to safer and more affordable permanent housing are largely non-existent within the Toronto Shelter system.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 14: GTA Shelter Population (DSOSO)**<br>
+**Figure 15: GTA Shelter Population (DSOSO)**<br>
 **(Program Area Numbers)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=8, out.width='100%', fig.align='center'}
@@ -1384,13 +1445,13 @@ plotdf3NAPAly
 ```
 
 </div>
-**Figure 14. Homeless Program Area within the GTA.** Homeless programs can be categorized as either: **(i) Base Shelter**, **(ii) Base Program - Refugee**, **(iii) Temporary Refugee Response**, **(iv) COVID-19 Response**, or **(v) Winter Response**. Generally they can be classified as either regular (i.e. year-round) or temporary programs. The rising numbers of homeless refugees and along with the long-term health and economic impacts of the COVID-19 pandemic appears to be driving the growing homeless population within the **GTA**. Even the cyclic **Winter Response** program, which normally spikes during the cold season, experienced a considerable rise in the number of homeless people during the last winter season.
+**Figure 15. Homeless Program Area within the GTA.** Homeless programs can be categorized as either: **(i) Base Shelter**, **(ii) Base Program - Refugee**, **(iii) Temporary Refugee Response**, **(iv) COVID-19 Response**, or **(v) Winter Response**. Generally they can be classified as either regular (i.e. year-round) or temporary programs. The rising numbers of homeless refugees and along with the long-term health and economic impacts of the COVID-19 pandemic appears to be driving the growing homeless population within the **GTA**. Even the cyclic **Winter Response** program, which normally spikes during the cold season, experienced a considerable rise in the number of homeless people during the last winter season.
 
 <br>
 <br>
 
 <div align=center>
-**Figure 15: Homes First - Mixed Adult COVID-19 Program, Delta Hotel Shelter**<br>
+**Figure 16: Homes First - Mixed Adult COVID-19 Program, Delta Hotel Shelter**<br>
 **(DSOSO: # Occupants)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width='90%', fig.align='center'}
@@ -1473,7 +1534,7 @@ plot3bly
 <br>
 
 <div align=center>
-**Figure 16: Homes First - Mixed Adult COVID-19 Program, Delta Hotel Shelter**<br>
+**Figure 17: Homes First - Mixed Adult COVID-19 Program, Delta Hotel Shelter**<br>
 **(DSOSO: # Unavailable Rooms)**<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=5, out.width='100%', fig.align='center'}
@@ -1507,13 +1568,13 @@ plot2035Kenly
 ```
 
 </div>
-**Figure 15 & 16. Homes First's Delta Hotel Shelter.** These two graphs show the number of rooms at the Delta Hotel Shelter that are either occupied (**Figure 15**) or unoccupied (**Figure 16**). Although the number of occupants have been steadily decreasing between Feb 5<sup>th</sup> to April 4<sup>th</sup>, the recent influx of refugees has rapidly corrected these falling numbers. The rapid changes in the number of people sheltered at the Delta Hotel over the past 2 months is also reflected in the number of unavailable rooms at the Delta shelter (**Figure 16**). The fitted **Loess** (**LO**cal regr**ESS**ion) curve is fairly <u>well defined</u> (i.e. residuals are fairly constant over the chosen range of x values), which suggests "*real*" trends in the data (e.g. rapid increase in # unavailable rooms between Feb 5th and April 4th, followed by a quick reversal of this trend between April 4th to present). Nevertheless, it is important to note that the overnight **Delta Hotel Shelter** (Program ID 16011) supervised by **Homes First** is, according to **DSOSO** records, a <u>designated</u> mixed adult (Sector) shelter that falls under the emergency COVID-19 Program. So it is by definition <u>not</u> a refugee-only shelter space. According to **Homes First**, which runs many other additional shelter and supportive housing sites, their mission is to "*develop and provide affordable, stable housing and support services to break the cycle of homelessness for people with the fewest housing options*". However, despite the continuing rise in the number of homeless persons in Toronto (**Fig. 6**,**8**,**11**,**12**), as well as the recent influx of Federal dollars (**<a class="one" href="https://www.cbc.ca/news/canada/toronto/asylum-seeker-shelter-funding-toronto-1.7102849">$162 million</a>**) to support the Toronto shelter system, **Homes First** has unilaterally decided to transition the **Delta** Hotel Shelter to a refugee only space (i.e. no consultations with residents). Apparently, in accordance with the wishes of local Ward 22 councillor Nick Mantas, the shelter is actively trying to move or evict people from the safety of the shelter. Many have already faced punitive "*service restrictions*" without any appeals process. Even the recent updated appeals process typically results in the eviction of the client at the end of the restriction period. It is important to note that during the time it takes to resolve the appeal process the client is removed from the shelter and forced to find accommodations on their own (i.e. left homeless). Homes First's exclusion of the Delta residents from any decision making process, one that directly impacts their immediate and future well being, is both imprudent and overtly punitive in nature. Many residents are afraid that they will be forced to move back onto the streets, or to some unsafe open congregate shelter space. The non-transparent nature of this decision making process has only heightened the homeless residents' fears, anxiety and distrust of Homes First. This situation has only been exacerbated by the lack of available housing workers who are suppose to be working with the Delta's homeless residents. The current drive to transition the Delta hotel to a refugee-only shelter, at the expense of the non-refugee homeless population, is perplexing given the recent influx of Federal dollars into the Toronto shelter system. 
+**Figure 16 & 17. Homes First's Delta Hotel Shelter.** These two graphs show the number of rooms at the Delta Hotel Shelter that are either occupied (**Figure 16**) or unoccupied (**Figure 17**). Although the number of occupants have been steadily decreasing between Feb 5<sup>th</sup> to April 4<sup>th</sup>, the recent influx of refugees has rapidly corrected these falling numbers. The rapid changes in the number of people sheltered at the Delta Hotel over the past 2 months is also reflected in the number of unavailable rooms at the Delta shelter (**Figure 17**). The fitted **Loess** (**LO**cal regr**ESS**ion) curve is fairly <u>well defined</u> (i.e. residuals are fairly constant over the chosen range of x values), which suggests "*real*" trends in the data (e.g. rapid increase in # unavailable rooms between Feb 5th and April 4th, followed by a quick reversal of this trend between April 4th to present). Nevertheless, it is important to note that the overnight **Delta Hotel Shelter** (Program ID 16011) supervised by **Homes First** is, according to **DSOSO** records, a <u>designated</u> mixed adult (Sector) shelter that falls under the emergency COVID-19 Program. So it is by definition <u>not</u> a refugee-only shelter space. According to **Homes First**, which runs many other additional shelter and supportive housing sites, their mission is to "*develop and provide affordable, stable housing and support services to break the cycle of homelessness for people with the fewest housing options*". However, despite the continuing rise in the number of homeless persons in Toronto (**Fig. 6**,**9**,**12**,**13**), as well as the recent influx of Federal dollars (**<a class="one" href="https://www.cbc.ca/news/canada/toronto/asylum-seeker-shelter-funding-toronto-1.7102849">$162 million</a>**) to support the Toronto shelter system, **Homes First** has unilaterally decided to transition the **Delta** Hotel Shelter to a refugee only space (i.e. no consultations with residents). Apparently, in accordance with the wishes of local Ward 22 councillor Nick Mantas, the shelter is actively trying to move or evict people from the safety of this shelter. Many have already faced "*service restrictions*" without any appeals process. Even the newly implemented appeals process typically results in the eviction of the client at the end of the restriction period. It is important to note that during the time it takes to resolve the appeal process the client is removed from the shelter and forced to find accommodations on their own (i.e. left homeless). Homes First's refusal to consult with Delta residents about the fate of the shelter, one that directly impacts their immediate and future well being, is both imprudent and overtly punitive in nature. Many residents are afraid that they will be forced to move back onto the streets, or into some unsafe open shelter space. Many have already been severely traumatized (i.e. physically and verbally assaulted, victims of theft, witness friends and people die) by many of the current shelter providers. The lack of transparency about the fate of the Delta shelter has only heightened the resident's fears, anxiety and distrust of Homes First. This situation has only been exacerbated by the lack of available housing workers at the Delta shelter. The current drive to transition the Delta Hotel to a refugee-only shelter, at the expense of non-refugees, is perplexing given the recent influx of Federal dollars into the Toronto shelter system. Shelter spaces should be inclusive by nature, and not resort to punitive measures that divide and further traumatize the most marginalized members of our society.
 
 <br>
 <br>
 
 
-### References
+### <b>References</b>
 
 **1.** Havi Echenberg and Laura Munn-Rivard (2020). Defining and Enumerating Homelessness in Canada. Publication No. 2020-41-E, Parliamentary Information and Research Service, &copy; Library of Parliament, Ottawa, Canada 2020.
 
